--- a/content/data/config.json
+++ b/content/data/config.json
@@ -6,7 +6,7 @@
         "has_nav": true,
         "nav_links": [
             {
-                "label": "Features",
+                "label": "MG ZS",
                 "url": "/features",
                 "style": "link"
             },
