config.json: updated label in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -11,7 +11,7 @@
                 "style": "link"
             },
             {
-                "label": "Blog",
+                "label": "MG ESH",
                 "url": "/blog",
                 "style": "link"
             },
