config.json: updated logo in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -30,7 +30,8 @@
                 "url": "/contact",
                 "style": "primary"
             }
-        ]
+        ],
+        "logo": "/images/MG_Motor_India_logo.jpeg"
     },
     "footer": {
         "has_nav": true,
