config.json: updated style in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -8,7 +8,7 @@
             {
                 "label": "MG ZS",
                 "url": "/features",
-                "style": "link"
+                "style": "primary"
             },
             {
                 "label": "MG ESH",
